--- a/Dn6Poc.DocuMgmtPortal/Views/Shared/_Layout.cshtml
+++ b/Dn6Poc.DocuMgmtPortal/Views/Shared/_Layout.cshtml
@@ -1,9 +1,11 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Dn6Poc.DocuMgmtPortal</title>
+    <title>@ViewData["Title"] - @Configuration["Application:Name"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Dn6Poc.DocuMgmtPortal.styles.css" asp-append-version="true" />
@@ -12,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Dn6Poc.DocuMgmtPortal</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@Configuration["Application:Name"]</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
