--- a/Dn6Poc.DocuMgmtPortal/Views/Home/Index.cshtml
+++ b/Dn6Poc.DocuMgmtPortal/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
-﻿@{
+﻿@inject IConfiguration Configuration
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to @Configuration["Application:Name"]</h1>
+
+    <div class="security-warning">
+        <h2>W A R N I N G !</h2>
+
+        <h3>This is a restricted network.</h3>
+
+        <p>Use of this network, its equipment, and resources is monitored at all times and requires explicit permission from the network administrator.</p>
+        <p>If you do not have this permission in writing, you are violating the regulations of this network and can and will be prosecuted to the full extent of the law.</p>
+        <p>By continuing into this system, you are acknowledging that you are aware of and agree to these terms.</p>
+    </div>
+
+    <a asp-controller="Authentication" asp-action="Login" class="btn btn-primary">Login </a>
 </div>
