--- a/Dn6Poc.DocuMgmtPortal/Views/Home/Index.cshtml
+++ b/Dn6Poc.DocuMgmtPortal/Views/Home/Index.cshtml
@@ -5,16 +5,15 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to @Configuration["Application:Name"]</h1>
-
-    <div class="security-warning">
-        <h2>W A R N I N G !</h2>
-
-        <h3>This is a restricted network.</h3>
-
-        <p>Use of this network, its equipment, and resources is monitored at all times and requires explicit permission from the network administrator.</p>
-        <p>If you do not have this permission in writing, you are violating the regulations of this network and can and will be prosecuted to the full extent of the law.</p>
-        <p>By continuing into this system, you are acknowledging that you are aware of and agree to these terms.</p>
-    </div>
-
-    <a asp-controller="Authentication" asp-action="Login" class="btn btn-primary">Login </a>
 </div>
+
+@if (!User.Identity.IsAuthenticated)
+{
+    @await Html.PartialAsync("/Views/Shared/_SecurityWarningPartial.cshtml")
+} 
+else
+{
+    <text>
+    auth users content
+    </text>
+}
