--- a/Dn6Poc.DocuMgmtPortal/Views/Shared/_SecurityWarningPartial.cshtml
+++ b/Dn6Poc.DocuMgmtPortal/Views/Shared/_SecurityWarningPartial.cshtml
@@ -9,6 +9,6 @@
     <p>By continuing into this system, you are acknowledging that you are aware of and agree to these terms.</p>
 
     <div>
-        <a asp-controller="Authentication" asp-action="Login" class="btn btn-primary">Login </a>
+        <a asp-controller="Login" asp-action="Index" class="btn btn-primary">Login </a>
     </div>
 </div>
