--- a/Dn6Poc.DocuMgmtPortal/Views/Shared/_Layout.cshtml
+++ b/Dn6Poc.DocuMgmtPortal/Views/Shared/_Layout.cshtml
@@ -28,13 +28,15 @@
                         {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                User Management
+                                Access Control
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Index" title="All user list">Users</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Role" asp-action="Index" title="All role list">Roles</a></li>
+                                
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Role" asp-action="Index">User-Roles</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Role" asp-action="Index">User-Forms</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -79,8 +81,8 @@
                                 Alistair Theirin
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Profile</a></li>
-                                <li><a class="dropdown-item" href="#">Change Password</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Profile" asp-action="Index">Profile</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Password" asp-action="Index">Change Password</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Logout" asp-action="Index">Log out</a></li>
                             </ul>
