--- a/Dn6Poc.DocuMgmtPortal/wwwroot/css/site.css
+++ b/Dn6Poc.DocuMgmtPortal/wwwroot/css/site.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+
 html {
   font-size: 14px;
 }
@@ -23,6 +25,14 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+}
+
+.panel {
+  margin: .5rem 0;
+}
+
+.hide {
+    display: none;
 }
 
 /* Self-custom */
