--- a/Dn6Poc.DocuMgmtPortal/Views/Role/Index.cshtml
+++ b/Dn6Poc.DocuMgmtPortal/Views/Role/Index.cshtml
@@ -17,7 +17,9 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>System administrator</td>
+      <td>
+          <a asp-area="" asp-controller="Role" asp-action="Details" asp-route-id="@Role.SYSTEM_ADMINISTRATOR">System administrator</a>
+      </td>
       <td>Users in this group has all access privileges</td>
     </tr>
     
