--- a/Dn6Poc.DocuMgmtPortal/wwwroot/css/site.css
+++ b/Dn6Poc.DocuMgmtPortal/wwwroot/css/site.css
@@ -1,4 +1,6 @@
+@charset "utf-8";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+@import url(grapejs.css);
 
 html {
   font-size: 14px;
@@ -43,3 +45,4 @@ body {
 .security-warning > h3 {
   margin: 1.6rem 0
 }
+
