--- a/Dn6Poc.DocuMgmtPortal/Views/Shared/_Layout.cshtml
+++ b/Dn6Poc.DocuMgmtPortal/Views/Shared/_Layout.cshtml
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Dn6Poc.DocuMgmtPortal.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="//unpkg.com/grapesjs/dist/css/grapes.min.css">
-    
 </head>
 <body>
     <header>
@@ -26,7 +24,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        @if (User.Identity.IsAuthenticated)
+                        @if ((User.Identity != null) && (User.Identity.IsAuthenticated))
                         {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -71,7 +69,7 @@
                         </li>
                         }
                     </ul>
-                    @if (User.Identity.IsAuthenticated)
+                    @if ((User.Identity != null) && (User.Identity.IsAuthenticated))
                     {
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
