--- a/Dn6Poc.DocuMgmtPortal/Views/Shared/_LayoutForEditor.cshtml
+++ b/Dn6Poc.DocuMgmtPortal/Views/Shared/_LayoutForEditor.cshtml
@@ -28,7 +28,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        @if (User.Identity.IsAuthenticated)
+                        @if ((User.Identity != null) && (User.Identity.IsAuthenticated))
                         {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -73,7 +73,7 @@
                         </li>
                         }
                     </ul>
-                    @if (User.Identity.IsAuthenticated)
+                    @if ((User.Identity != null) && (User.Identity.IsAuthenticated))
                     {
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
