--- a/Dn6Poc.DocuMgmtPortal/Views/Role/Index.cshtml
+++ b/Dn6Poc.DocuMgmtPortal/Views/Role/Index.cshtml
@@ -18,7 +18,7 @@
     <tr>
       <th scope="row">1</th>
       <td>
-          <a asp-area="" asp-controller="Role" asp-action="Details" asp-route-id="@Role.SYSTEM_ADMINISTRATOR">System administrator</a>
+          <a asp-area="" asp-controller="Role" asp-action="Details" asp-route-id="@Role.SystemAdministrator">System administrator</a>
       </td>
       <td>Users in this group has all access privileges</td>
     </tr>
